@@ -1,3 +1,11 @@
+Fri, 21 Sep 2007 00:32:51 +0200 <thp@perli.net>
+Center gPodderEpisode on treeAvailable for less mouse hopping
+
+	* src/gpodder/gui.py: If possible, center the gPodderEpisode dialog
+	window on the treeAvailable, because that makes the position of the
+	opened dialog more predictable and easier to use (as if the
+	gPodderEpisode dialog was "inside" the treeView from which it opened)
+
 Fri, 21 Sep 2007 00:07:49 +0200 <thp@perli.net>
 Don't translate feed format string examples
 
